# CG-UFM

./: .gitignore  README.md  background.md  benchmark.py  generate_dummy_data.py  inference.py  pyproject.toml  test_pipeline.py  train.py
core/: aggregation.py  flow_matching.py  ode_solver.py
data/: dataset.py  transforms.py
metrics/: topo_eval.py
models/: cufm_net.py
models/backbones/: point_transformer.py  pointnet2.py
models/modules/: consensus.py  densify.py
outputs/benchmark/: evaluation_results.csv  evaluation_table.tex
scripts/: README.md  align_sfm_to_cad.py  cad_to_gt.py  filter_sfm_background.py  ply_to_pt.py  run_full_pipeline.py  run_sfm.sh  run_sfm_hloc.py  run_sfm_known_pose.py
